--- a/estilos.css
+++ b/estilos.css
@@ -11,6 +11,7 @@ header h1 {
     font-family: Arial, Helvetica, sans-serif;
     margin: 25px;
     color: #ffffff;
+    margin-bottom: 35px;
 
 }
 
@@ -36,7 +37,7 @@ header img {
 .contenedor_links nav ul li {
 
     list-style: none;
-    margin: 45px;
+    margin: 65px;
     border: 0px solid black;
     background-color: rgb(255, 123, 0);
     text-align: center;
@@ -59,5 +60,12 @@ footer hr{
 
     margin-bottom: 55px;
     background-color: aquamarine;
+
+}
+
+footer a {
+
+    text-decoration: none;
+    color: #dacece;
 
 }
