--- a/estilos.css
+++ b/estilos.css
@@ -56,6 +56,13 @@ header img {
 
 }
 
+#nav_links li:hover {
+
+    background-color: rgb(17, 0, 255);
+    color: white;
+
+}
+
 footer hr{
 
     margin-bottom: 55px;
